# scratch_3d_renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main  run.sh
assets/: f22-video.webm  f22.mov
src/: camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  texture.c  texture.h  triangle.c  triangle.h  upng.c  utils.c  utils.h  vector.c  vector.h
